Fix gap between buttons is "NavBar"uses the 'top' prop

--- a/src/components/NavBar/navBar.module.scss
+++ b/src/components/NavBar/navBar.module.scss
@@ -36,6 +36,10 @@
   }
 }
 
+.buttonsContainerTop {
+  gap: 4rem;
+}
+
 .navBarBottom {
   display: flex;
   align-items: center;
